--- a/frontend/src/pages/embla.scss
+++ b/frontend/src/pages/embla.scss
@@ -1,10 +1,37 @@
+.carousel-pages{
+  background-image: url(/slike/kuca-slika-prva.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  // padding-top: 5rem;
+  padding: 3rem 0;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    // background: rgba(255, 255, 255, 0.85);
+    z-index: 1;
+  }
+}
+
 .embla {
   max-width: 100%;
   margin: auto;
+  // margin-top: 3rem;
   --slide-height: 19rem;
   --slide-spacing: 1rem;
   --slide-size: 70%;
-  padding: 0 9rem;
+  // padding: 0 9rem;
+  padding-bottom: 15rem;
+  width: 80%;
+  position: relative;
+  z-index: 2;
 }
 .embla__viewport {
   overflow: hidden;
