--- a/frontend/src/pages/embla.scss
+++ b/frontend/src/pages/embla.scss
@@ -1,5 +1,5 @@
 .carousel-pages{
-  background-image: url(/slike/kuca-slika-prva.png);
+  background-image: url(../../public/slike/kuca-slika-prva.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
