--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,4 +1,11 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+  width: 100%;
 }
